syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "RoutinesProto";
option objc_class_prefix = "RTP";

package routines;

// Interface exported by the server.
service Routines {
  rpc GetConfig(ConfigItem) returns (ValueObject) {}
  rpc CheckValue(ValueObject) returns (stream ValueObject) {}
}

message Identity{
  int64 value=1;
}
message ConfigItem{
  string item=1;
  string key=2;
}

message StringValue{
  string value=1;
}

message Filter{
  message Value {
    oneof value {
      string string_value=2;
      int64 int_value=3;
      double real_value=4;
    }
  }

  map<string, Value> data = 1;
}

message ValueObject {
  message Value {
    oneof value {
      string string_value=2;
      int64 int_value=3;
      double real_value=4;
      bytes blob=5;
      Strings strings=6;
      ValueObject object=7;
    }
  }

  map<string, Value> data = 1;
}

message ValueObjects{
  repeated ValueObject values=1;
}

message EmptyMessage {}

message Response{
  enum Result{
    OK=0;
    ERR=1;
  }
  string message=2;
}

message PipeResponse{
  string tag=1;
  oneof value {
    string string_value=2;
    int64 int_value=3;
    double real_value=4;
    Strings strings=5;
  }
}

message Strings{
  repeated string value=1;
}

message HeadersMessage {
  message Values {
    repeated string values = 1;
  }
  map<string, Values> Metadata = 1;
}

message TypeValue{
  string id=1;
  string description=2;
  map<string, string> metadata=3;
}

message TypeList{
  string type_name=1;
  repeated TypeValue values=2;
}

message TypeSymbol{
  string type_name=1;
  string value_id=2;
}

message PeriodData{
  string from_date = 1;
  string thru_date = 2;
}

enum Indicator{
  NO=0;
  YES=1;
  UNKNOWN=2;
}

message DecimalValue {
  uint32 scale = 1;
  uint32 precision = 2;
  bytes value = 3;
}
